Changed notebook cell prompt from monospace to JupyterLab's main UI font, fixed the background spacing of portrait icons inside the tabs

--- a/src/default-theme/icons.css
+++ b/src/default-theme/icons.css
@@ -57,7 +57,7 @@
 }
 
 .jp-MainAreaPortraitIcon {
-  background-position: 0 1px;
+  background-position: 0 2px;
   background-repeat: no-repeat;
   margin-right: 0;
   width: 20px;
