--- a/src/notebook/cells/index.css
+++ b/src/notebook/cells/index.css
@@ -23,9 +23,10 @@
   flex-shrink: 0;
   flex-basis: var(--jp-private-notebook-cell-prompt-width);
   color: var(--jp-private-notebook-cell-inprompt-color);
-  font-family: monospace;
+  font-family: var(--jp-private-notebook-cell-font-family);
   padding: var(--jp-code-padding);
   text-align: right;
+  letter-spacing: var(--jp-private-notebook-cell-prompt-letter-spacing);
   line-height: var(--jp-code-line-height);
   font-size: var(--jp-code-font-size);
   border: var(--jp-border-width) solid transparent;
